# rustgames-site

./: .gitignore  Cargo.toml  LICENSE.APACHE  LICENSE.MIT  README.md
assets/: blog_description.html  blogs_list.html  index.css  login.html  project_description.html  projects_list.html  register.html  sse.html  static.html  websockets.html
assets/anyhow-error-response/: Cargo.toml
assets/chat/: Cargo.toml
assets/consume-body-in-extractor-or-middleware/: Cargo.toml
assets/cors/: Cargo.toml
assets/customize-extractor-error/: Cargo.toml
assets/customize-path-rejection/: Cargo.toml
assets/error-handling-and-dependency-injection/: Cargo.toml
client/: .gitignore  index.html  package-lock.json  package.json
client/src/: App.css  App.tsx  types.d.ts
src/: anyhow_error_response.rs  blogs.rs  chat.rs  common.rs  consume_body_in_extractor_or_middleware.rs  cors.rs  customize_path_rejection.rs  db.rs  error_handling_and_dependency_injection.rs  form.rs  global_404_handler.rs  graceful_shutdown.rs  handle_head_request.rs  http_proxy.rs  jwt.rs  key_value_store.rs  listen_multiple_addrs.rs  login.rs  low_level_rustls.rs  main.rs  multipart_form.rs  oauth.rs  parse_body_based_on_content_type.rs  print_request_response.rs  projects.rs  prometheus_metrics.rs  query_params_with_empty_strings.rs  readme.rs  reverse_proxy.rs  static_pages.rs  todos.rs  types.rs
src/backup/: main.rs  todos.rs
src/customize_extractor_error/: custom_extractor.rs  derive_from_request.rs  mod.rs  with_rejection.rs
templates/blogs/: new.html
templates/login/: login.html  register.html
