[package]
name = "rustgames-site"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "*"
axum = "*"
serde = { version = "*", features = ["derive"] }
tokio = { version = "*", features = ["full"] }
tower = { version = "*", features = ["full"] }
tower-http = { version = "*", features = ["add-extension", "trace"] }
tracing = "*"
tracing-subscriber = { version = "*", features = ["env-filter"] }
uuid = { version = "*", features = ["serde", "v4"] }