[package]
name = "website"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "*"
axum-extra = { version = "*", features = ["spa"] }
markdown = "*"
serde = { version = "*", features = ["derive"] }
tokio = { version = "*", features = ["full"] }
sqlx = { version = "*", features = ["postgres", "runtime-tokio-rustls"] }
tera = "*"
tower-cookies = "*"
cxx = "*"

[build-dependencies]
cxx-build = "*"
